# test-user-bot

./: .env.example  .gitignore  Makefile  Readme.md  TZ.xlsx  alembic.ini  entrypoint.sh  main.py  pyproject.toml
core/apps/users/: entities.py  models.py  services.py
core/project/migrations/: env.py
core/project/migrations/versions/: 6adb98e5c95d_.py  f864fb07fd36_.py
core/project/settings/: database.py  main.py
core/telegram/: messages.py  user_bot.py
docker_compose/: app.yaml  storages.yaml
